--- a/organiser-project/organiser/views/board/get.html
+++ b/organiser-project/organiser/views/board/get.html
@@ -4,16 +4,20 @@
 		<title>{{title}}</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		{% for link in styles %}
+		{% for link in css %}
 		<link rel="stylesheet" href="{{ link }}">
+		{% endfor %}
+		{% for link in js %}
+		<script src="{{ link }}"></script>
 		{% endfor %}
 	</head>
 	<body class="bg-white">
 	<div class="pure-g bg-navy silver center" id="header">
-		<div class="pure-u-1-3"><p>Thirds</p></div>
+		<div class="pure-u-1-3"><p>{ link(abc) }</p></div>
 		<div class="pure-u-1-3"><p>Thirds</p></div>
 		<div class="pure-u-1-3"><p>Thirds</p></div>
 	</div>
 		<h1>{{ content }}</h1>
+		{% globals() %}
 	</body>
 </html>
