--- a/organiser/board/templates/board/index.html
+++ b/organiser/board/templates/board/index.html
@@ -1,4 +1,13 @@
 {% extends "organiser/base.html" %}
 {% block content %}
-{{ content }}
+<div class="pure-g">
+    <div class="pure-u-1-3">
+        <h2>{{ _('Birthdays') }}</h2>
+        {{ birthdays }}
+    </div>
+    <div class="pure-u-2-3">
+        <h2>{{ _('Dutys today') }}</h2>
+        {{ dutys }}
+    </div>
+</div>
 {% endblock %}
