--- a/organiser/templates/organiser/base.html
+++ b/organiser/templates/organiser/base.html
@@ -11,11 +11,30 @@
         <link rel="stylesheet" href="{% static "css/organiser.css" %}">
     </head>
     <body class="bg-white">
-    <div class="pure-g bg-navy silver center" id="header">
-        <div class="pure-u-1-3"><a href="{% url 'board:index' %}"><div>{{ _('Board') }}</div></a></div>
-        <div class="pure-u-1-3"><a href="{{ volunteer_list_url }}"><div>{{ _('Volunteers') }}</div></a></div>
-        <div class="pure-u-1-3"><a href="{{ patient_list_url }}"><div>{{ _('Patients') }}</div></a></div>
-    </div>
-    {% block content %}{% endblock %}
+        <div class="pure-g bg-navy silver center" id="header">
+
+            <div class="pure-u-1-4">
+                <a href="{% url 'board:index' %}" class="silver">
+                    {{ _('Board') }}
+                </a>
+            </div>
+            <div class="pure-u-1-4">
+                <a href="{{ duty_list_url }}" class="silver">
+                    {{ _('Dutys') }}
+                </a>
+            </div>
+            <div class="pure-u-1-4">
+                <a href="{{ volunteer_list_url }}" class="silver">
+                    {{ _('Volunteers') }}
+                </a>
+            </div>
+            <div class="pure-u-1-4">
+                <a href="{{ patient_list_url }}" class="silver">
+                    {{ _('Patients') }}
+                </a>
+            </div>
+
+        </div>
+        {% block content %}{% endblock %}
     </body>
 </html>
