--- a/organiser/board/templates/board/index.html
+++ b/organiser/board/templates/board/index.html
@@ -2,12 +2,46 @@
 {% block content %}
 <div class="pure-g">
     <div class="pure-u-1-3">
-        <h2>{{ _('Birthdays') }}</h2>
-        {{ birthdays }}
+        <h2>{{_('Birthdays today')}}</h2>
+        <h3>{{_('Patients')}}</h3>
+            {% if birthdays_patients_today  %}
+                {{ birthdays_patients_today }}
+            {% else %}
+                {{_('Nobody')}}
+            {% endif %}
+        <h3>{{_('Volunteers')}}</h3>
+            {% if birthdays_volunteers_today  %}
+                {{ birthdays_volunteers_today }}
+            {% else %}
+                {{_('Nobody')}}
+            {% endif %}
+        <h2>{{_('Birthdays')}} {{_('in the next week')}}</h2>
+        <h3>{{_('Patients')}}</h3>
+            {% if birthdays_patients_soon  %}
+                {{ birthdays_patients_soon }}
+            {% else %}
+                {{_('Nobody')}}
+            {% endif %}
+        <h3>{{_('Volunteers')}}</h3>
+            {% if birthdays_volunteers_soon  %}
+                {{ birthdays_volunteers_soon }}
+            {% else %}
+                {{_('Nobody')}}
+            {% endif %}
     </div>
     <div class="pure-u-2-3">
-        <h2>{{ _('Dutys today') }}</h2>
-        {{ dutys }}
+        <h2>{{_('Dutys today')}}</h2>
+            {% if duties_today  %}
+                {{ duties_today }}
+            {% else %}
+                {{_('Nobody has a duty')}}
+            {% endif %}
+        <h2>{{_('Duties')}} {{ _('in the next week')}}</h2>
+            {% if duties_soon  %}
+                {{ duties_soon }}
+            {% else %}
+                {{_('Nobody has a duty')}}
+            {% endif %}
     </div>
 </div>
 {% endblock %}
