Added Czech translation
Signed-off-by: Jan Tulak <jan@tulak.me>

--- a/organiser/board/templates/board/duties.html
+++ b/organiser/board/templates/board/duties.html
@@ -10,7 +10,7 @@
                     </div>
                 </li>
             {% empty %}
-                <li>{{_('Nobody has a duty')}}</li>
+                <li>{{_('Nobody has a duty.')}}</li>
             {% endfor %}
             </ul>
         <h2>{{_('Duties')}} {{ _('in the next week')}}</h2>
