--- a/organiser/templates/organiser/base.html
+++ b/organiser/templates/organiser/base.html
@@ -1,5 +1,7 @@
 {% load staticfiles %}
 {% load admin_urls %}
+{% load i18n %}
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -11,6 +13,23 @@
         <link rel="stylesheet" href="{% static "css/organiser.css" %}">
     </head>
     <body class="bg-white">
+        <div class="bg-navy silver">
+
+            <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+                <input name="next" type="hidden" value="{{ request.path|strip_lang }}" />
+                <select name="language">
+                    {% get_current_language as LANGUAGE_CODE %}
+                    {% get_available_languages as LANGUAGES %}
+                    {% get_language_info_list for LANGUAGES as languages %}
+                    {% for language in languages %}
+                    <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected="selected"{% endif %}>
+                    {{ language.name_local }} ({{ language.code }})
+                    </option>
+                    {% endfor %}
+                </select>
+                <input type="submit" value="Go" />
+            </form>
+        </div>
         <div class="pure-g bg-navy silver center" id="header">
 
             <div class="pure-u-1-4">
@@ -20,7 +39,7 @@
             </div>
             <div class="pure-u-1-4">
                 <a href="{{ duty_list_url }}" class="silver">
-                    {{ _('Dutys') }}
+                    {{ _('Duties') }}
                 </a>
             </div>
             <div class="pure-u-1-4">
