--- a/organiser/board/templates/board/duties.html
+++ b/organiser/board/templates/board/duties.html
@@ -4,7 +4,7 @@
             {% for duty in duties_today  %}
                 <li class="pure-g">
                     <div class="pure-u-3-4">
-                        {{duty.volunteer}} will go to {{duty.patient}} on {{duty.time}}
+                        {{duty.volunteer}} {{_('will go to')}} {{duty.patient}} {{_('on')}} {{duty.time}}
                     </div>
                     <div class="pure-u-1-4">
                     </div>
