--- a/organiser/templates/organiser/base.html
+++ b/organiser/templates/organiser/base.html
@@ -1,21 +1,48 @@
 {% load staticfiles %}
 {% load admin_urls %}
-{% load i18n %}
+{% load i18n admin_static %}
 
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{{title}}</title>
+        <title>{% block title %}{% endblock %}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="{% static "css/pure/0.6.0/pure-min.css" %}">
         <link rel="stylesheet" href="{% static "css/colors.min.css" %}">
         <link rel="stylesheet" href="{% static "css/organiser.css" %}">
-    </head>
-    <body class="bg-white">
-        <div class="bg-navy silver">
 
-            <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+        <link rel="stylesheet" type="text/css" href="{% block stylesheet %}{% static "admin/css/base.css" %}{% endblock %}" />
+        {% block extrastyle %}{% endblock %}
+        <!--[if lte IE 7]>
+            <link rel="stylesheet" type="text/css" 
+              href="{% block stylesheet_ie %}{% static "admin/css/ie.css" %}{% endblock %}" />
+        <![endif]-->
+        {% if LANGUAGE_BIDI %}
+        <link rel="stylesheet" type="text/css" 
+            href="{% block stylesheet_rtl %}{% static "admin/css/rtl.css" %}{% endblock %}" />
+        {% endif %}
+        <script type="text/javascript">
+            window.__admin_media_prefix__ = "{% filter escapejs %}{% static "admin/" %}{% endfilter %}";
+        </script>
+        <script type="text/javascript">
+            window.__admin_utc_offset__ = "{% filter escapejs %}{% now "Z" %}{% endfilter %}";
+        </script>
+        {% block extrahead %}{% endblock %}
+        {% block blockbots %}<meta name="robots" content="NONE,NOARCHIVE" />{% endblock %}
+    </head>
+    <body class="{% if is_popup %}popup {% endif %}{% block bodyclass %}{% endblock %}">
+
+<!-- Container -->
+<div id="container">
+    {% if not is_popup %}
+    <!-- Header -->
+    <div id="header">
+        <div id="branding">
+            {% block branding %}{% endblock %}
+        </div>
+        <div>
+            <form class="lang-form" action="{% url 'set_language' %}" method="post">{% csrf_token %}
                 <input name="next" type="hidden" value="{{ request.path|strip_lang }}" />
                 <select name="language">
                     {% get_current_language as LANGUAGE_CODE %}
@@ -27,9 +54,33 @@
                     </option>
                     {% endfor %}
                 </select>
-                <input type="submit" value="Go" />
+                <input type="submit" value="{{_('Change')}}" />
             </form>
+            {% block usertools %}
+            {% if has_permission %}
+            <div id="user-tools">
+                {% block welcome-msg %}
+                {% trans 'Welcome,' %}
+                <strong>{% firstof user.get_short_name user.get_username %}</strong>.
+                {% endblock %}
+                {% block userlinks %}
+                {% if user.is_active and user.is_staff %}
+                {% url 'django-admindocs-docroot' as docsroot %}
+                <a href="{% url 'admin:index' %}">{% trans 'Site administration' %}</a> /
+                {% if docsroot %}
+                <a href="{{ docsroot }}">{% trans 'Documentation' %}</a> /
+                {% endif %}
+                {% endif %}
+                {% if user.has_usable_password %}
+                <a href="{% url 'admin:password_change' %}">{% trans 'Change password' %}</a> /
+                {% endif %}
+                <a href="{% url 'admin:logout' %}">{% trans 'Log out' %}</a>
+                {% endblock %}
+            </div>
+            {% endif %}
+            {% endblock %}
         </div>
+        {% block nav-global %}{% endblock %}
         <div class="pure-g bg-navy silver center" id="header">
 
             <div class="pure-u-1-4">
@@ -39,6 +90,7 @@
             </div>
             <div class="pure-u-1-4">
                 <a href="{{ duty_list_url }}" class="silver">
+                    {#<a href="{% url opts|admin_urlname:'changelist' %}" class="silver">#}
                     {{ _('Duties') }}
                 </a>
             </div>
@@ -54,6 +106,40 @@
             </div>
 
         </div>
-        {% block content %}{% endblock %}
+    </div>
+    {{ duty_list_url }}
+    <!-- END Header -->
+    {% block breadcrumbs %}
+    <div class="breadcrumbs">
+        <a href="{% url 'board:index' %}">{% trans 'Board' %}</a>
+        {% if title %} &rsaquo; {{ title }}{% endif %}
+    </div>
+    {% endblock %}
+    {% endif %}
+
+    {% block messages %}
+    {% if messages %}
+    <ul class="messagelist">{% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message|capfirst }}</li>
+        {% endfor %}</ul>
+    {% endif %}
+    {% endblock messages %}
+
+    <!-- Content -->
+    <div id="content" class="{% block coltype %}colM{% endblock %}">
+        {% block pretitle %}{% endblock %}
+        {% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
+        {% block content %}
+        {% block object-tools %}{% endblock %}
+        {{ content }}
+        {% endblock %}
+        {% block sidebar %}{% endblock %}
+        <br class="clear" />
+    </div>
+    {% block footer %}<div id="footer"></div>{% endblock %}
+    <!-- END Content -->
+</div>
+<!-- END Container -->
+
     </body>
 </html>
