--- a/organiser/templates/admin/change_list.html
+++ b/organiser/templates/admin/change_list.html
@@ -87,8 +87,9 @@
       {% endif %}
 
       {% block result_list %}
+          {% load board_extras %}
           {% if action_form and actions_on_top and cl.show_admin_actions %}{% admin_actions %}{% endif %}
-          {% result_list cl %}
+          {% board_result_list cl extra %}
           {% if action_form and actions_on_bottom and cl.show_admin_actions %}{% admin_actions %}{% endif %}
       {% endblock %}
       {% block pagination %}{% pagination cl %}{% endblock %}
