Working coloured lines in results
Signed-off-by: Jan Tulak <jan@tulak.me>

--- a/organiser/templates/admin/change_list_results.html
+++ b/organiser/templates/admin/change_list_results.html
@@ -30,7 +30,10 @@
 {% if result.form.non_field_errors %}
     <tr><td colspan="{{ result|length }}">{{ result.form.non_field_errors }}</td></tr>
 {% endif %}
-<tr class="{% cycle 'row1' 'row2' %}">{% for item in result %}{{ item }}{% endfor %}</tr>
+<tr class="{% cycle 'row1' 'row2' %} {% get_index_minus_one css forloop.counter %}">
+    {% for item in result %}
+    {{ item }}
+    {% endfor %}</tr>
 {% endfor %}
 </tbody>
 </table>
