--- a/organiser/board/templates/board/duties.html
+++ b/organiser/board/templates/board/duties.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load board_extras %}
 {% block duties %}
         <h2>{{_('Dutys today')}}</h2>
             <ul class="list duty">
