--- a/organiser/board/templates/board/index.html
+++ b/organiser/board/templates/board/index.html
@@ -15,6 +15,11 @@
 
 {% block content %}
 <div class="pure-g">
+    <div class="pure-u-1-8">
+        <a href="{% url 'board:week_list' %}">{{_('Week list')}}</a>
+    </div>
+</div>
+<div class="pure-g">
     <div class="pure-u-1-3">
         {% include 'board/birthdays.html' %}
     </div>
