--- a/organiser/templates/organiser/base.html
+++ b/organiser/templates/organiser/base.html
@@ -140,5 +140,16 @@
 </div>
 <!-- END Container -->
 
+    <div id="footer" class="pure-g">
+        <div class="pure-u-1-3 left">
+            &copy; 2015 Jan Ťulák
+        </div>
+        <div class="pure-u-1-3"></div>
+        <div class="pure-u-1-3 right">
+            <a href="https://github.com/BroukPytlik/volunteer-organiser">
+                {{_('Source code')}}
+            </a>
+        </div>
+    </div>
     </body>
 </html>
