--- a/organiser/templates/static/css/organiser.css
+++ b/organiser/templates/static/css/organiser.css
@@ -2,6 +2,14 @@
 	text-align: center;
 }
 
+.left {
+    text-align: left;
+}
+
+.right {
+    text-align: right;
+}
+
 .lang-form {
     display: block;
     float: right;
