--- a/organiser/board/templates/board/week_list.html
+++ b/organiser/board/templates/board/week_list.html
@@ -61,7 +61,7 @@
             <td>{{duty.date|day_of_week}} {{duty.time|duty_time_short}}</td>
             <td>
                 {{duty.category1}}
-                {% if duty.Category2 %}
+                {% if duty.category2 %}
                 ({{duty.category2}})
                 {%endif%}
             </td>
@@ -87,7 +87,7 @@
             <td>{{duty.date|day_of_week}} {{duty.time|duty_time_short}}</td>
             <td>
                 {{duty.category1}}
-                {% if duty.Category2 %}
+                {% if duty.category2 %}
                 ({{duty.category2}})
                 {%endif%}
             </td>
