--- a/organiser/templates/static/css/organiser.css
+++ b/organiser/templates/static/css/organiser.css
@@ -1,3 +1,4 @@
+
 .center{
 	text-align: center;
 }
@@ -9,6 +10,13 @@
 .right {
     text-align: right;
 }
+
+.duties_table td {
+/*	
+ 	border: 1px solid #DDD;
+*/
+}
+
 
 .lang-form {
     display: block;
