Don't show year of birth for volunteers in week list
Signed-off-by: Jan Tulak <jan@tulak.me>

--- a/organiser/board/templates/board/vacancy_table.html
+++ b/organiser/board/templates/board/vacancy_table.html
@@ -13,7 +13,7 @@
 	</thead>
 	{%for v in vacancies%}
 	<tr>
-		<td>{{v.volunteer.full_name}} <i>{{v.volunteer.birthdate.year}}</i></td>
+		<td>{{v.volunteer.full_name}}</td>
 		<td>{{v.since}}</td>
 		<td>{{v.until|none_only:""}}</td>
 		<td>{{v.reason}}</td>
